update frames fields

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 .html, body{
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 /* 
@@ -86,13 +86,27 @@ loading screen page before load all page
 }
 
 /* this is the main theme */
-.container{
+.containers{
     background: #e9fcfc;
-    width: 100vw;
-    height: 100vh;
-    display: grid;
+    width: 100vw !important;
+    height: 100vh !important;
+    display: flex;
+    flex-flow: row;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
+.user-info {
+    width: 320px;
+    height: 90vh;
+    position: relative;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    border: 1px solid #aaa;
+    padding: 10px;
+    border-radius: 5px;
+}
 .avatar{
     position: relative;
     top: 10px;
@@ -108,31 +122,16 @@ loading screen page before load all page
     max-height: initial;
     transform-origin: center;
 }
-
-.user-info{
-    width: 25%;
-    height: 80vh;
-    position: relative;
-    top:50%;
-    left:10px;
-    transform: translateY(-50%);
-    border: 1px solid #555;
-    padding: 10px;
-    border-radius:5px;
-}
-
 .username{
     position: relative;
     top: 20px;
     left: 10px;
-    letter-spacing: 3px;
     font-family: sans-serif;
 }
 .email {
     position: relative;
     top: 20px;
     left: 10px;
-    letter-spacing: 3px;
     font-family: sans-serif;
 }
 .technologies {
@@ -240,4 +239,35 @@ loading screen page before load all page
     border-bottom-right-radius: 0;
     z-index: 9;
     background: blue;
+}
+.skills:nth-child(15)::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 70%;
+    height: 100%;
+    border-radius: 3px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    z-index: 9;
+    background: blue;
+}
+
+.mid-container{
+    margin: 20px;
+    padding: 15px;
+    display: flex;
+    flex-flow: column;
+}
+
+.mid-container .card{
+    width: 85%;
+    text-align: justify;
+    margin-bottom: 15px;
+    height: max-content;
+}
+
+.right-container{
+    margin: 10px;
 }
